# e2epool

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  inventory.example.yml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 1547a28ef314_initial_schema.py  6b32cbf8559d_enrich_operation_log_add_gc_index.py  a3f1d7c9e024_add_runners_table.py
docs/: architecture.md  deployment.md  e2e-test-hla.md
e2epool/: __main__.py  agent.py  agent_config.py  cli.py  config.py  database.py  dependencies.py  inventory.py  ipc.py  locking.py  main.py  models.py  reconcile.py  schemas.py
e2epool/backends/: agent_rpc.py  bare_metal.py  base.py  proxmox.py
e2epool/ci_adapters/: base.py  gitlab.py
e2epool/routers/: admin.py  checkpoint.py  health.py  internal.py  runner.py  webhook.py  ws.py
e2epool/services/: checkpoint_service.py  runner_service.py  ws_handler.py  ws_manager.py
e2epool/tasks/: celery_app.py  finalize.py  gc.py  poller.py  reconcile_task.py
launchd/: com.e2epool.agent.plist
scripts/: create-e2e-runner.sh  destroy-e2e-runner.sh  e2e-runner.yaml
systemd/: e2epool-agent.service
tests/: conftest.py  test_admin_api.py  test_agent.py  test_bare_metal_backend.py  test_checkpoint_api.py  test_checkpoint_service.py  test_cli.py  test_dependencies.py  test_finalize_task.py  test_gc.py  test_gitlab_adapter.py  test_health.py  test_inventory.py  test_ipc.py  test_locking.py  test_models.py  test_poller.py  test_proxmox_backend.py  test_reconcile.py  test_runner_service.py  test_schemas.py  test_webhook.py  test_ws_endpoint.py  test_ws_handler.py
