[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e2epool"
version = "0.1.0"
description = "E2E Test Pool Lifecycle Controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]~=0.129.0",
    "uvicorn[standard]~=0.40.0",
    "sqlalchemy~=2.0.46",
    "alembic~=1.18.4",
    "psycopg2-binary~=2.9.11",
    "pydantic-settings~=2.12.0",
    "celery[redis]~=5.6.2",
    "pyyaml~=6.0.3",
    "proxmoxer~=2.2.0",
    "requests~=2.28",
    "httpx~=0.28.1",
    "structlog~=25.5.0",
    "websockets~=16.0",
    "click~=8.3.1",
]

[project.scripts]
e2epool = "e2epool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "factory-boy>=3.3",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["e2epool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["F403", "F405"]
